--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -19,6 +19,8 @@
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
     "expo": "^54.0.7",
+    "expo-dev-client": "^6.0.15",
+    "expo-notifications": "~0.32.12",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.542.0",
     "react": "19.1.0",
