Correccion de errores y despliegue de previo de la app

--- a/app.json
+++ b/app.json
@@ -34,6 +34,7 @@
       "eas": {
         "projectId": "3366e720-c42a-48b2-aa0e-c87996242202"
       }
-    }
+    },
+    "owner": "diego336"
   }
 }
